# geoflow_c

./: .gitlab-ci.yml  CMakeLists.txt  cpbconcz2.cpp  pbsolvercz.cpp
devtools/conda-recipe/: build.sh  meta.yaml
examples/: example.ini  run_geometricFlow.sh  run_molecules.sh
src/: Atom.cpp  Atom.h  CMakeLists.txt  ComData.h  GMat.h  GeometricFlow.cpp  GeometricFlow.h  GeometricFlowStruct.h  GeometricFlowWrap.cpp  GeometricFlowWrap.h  Makefile.keith  cpbconcz2.h  main.cpp  modules.h  runGeometricFlow.cpp  runGeometricFlowWrap.c  solvationsub.cpp  solvationsub_test.cpp  subfunction.cpp  surfconcz.cpp  surfconcz_test.cpp
standalone/: Atom.C  Atom.h  CMakeLists.txt  ComData.h  GeometricFlow.C  GeometricFlow.cpp  GeometricFlow.h  Makefile  Mat.h  adiPartial.cpp  cpbconcz2.cpp  cpbconcz2.h  main.cpp  modules.cpp  modules.h  molecules.txt  pbsolvercz.cpp  runGeometricFlow.C  runGeometricFlow.cpp  subfunction.cpp  surfconcz.cpp
test/: CMakeLists.txt  solvationsub_test.cpp
